Gradle: disable all bundled plugins;